# diabetes-predictor-flask

./: README.md
PREDICTOR/: README.md  app.py  pyproject.toml  train_model.py
PREDICTOR/models/: diabetes_model.pkl  model_metadata.json
PREDICTOR/templates/: index.html
PREDICTOR/utils/: predictor.py  report_generator.py  report_parser.py
